# semantic-planning-msgs

./: CMakeLists.txt  README.md
msg/: ObjectDetection.msg  ObjectDetectionsList.msg  SceneClassification.msg
pod-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
pod-build/catkin_generated/: generate_cached_setup.py  nsf_nri_lar_msgs-msg-extras.cmake.develspace.in  nsf_nri_lar_msgs-msg-extras.cmake.installspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  semantic_planning_msgs-msg-extras.cmake.develspace.in  semantic_planning_msgs-msg-extras.cmake.installspace.in  setup_cached.sh
pod-build/catkin_generated/installspace/: .rosinstall  nsf_nri_lar_msgs-msg-paths.cmake  semantic_planning_msgs-msg-paths.cmake  semantic_planning_msgs.pc  semantic_planning_msgsConfig.cmake  setup.sh
pod-build/catkin_generated/stamps/semantic_planning_msgs/: package.xml.stamp
pod-build/cmake/: nsf_nri_lar_msgs-genmsg-context.py  nsf_nri_lar_msgs-genmsg.cmake  semantic_planning_msgs-genmsg-context.py  semantic_planning_msgs-genmsg.cmake
pod-build/devel/: .catkin  .rosinstall  setup.sh
pod-build/devel/include/semantic_planning_msgs/: ObjectDetection.h  ObjectDetectionsList.h  SceneClassification.h
pod-build/devel/lib/pkgconfig/: semantic_planning_msgs.pc
pod-build/devel/share/nsf_nri_lar_msgs/cmake/: nsf_nri_lar_msgs-msg-paths.cmake
pod-build/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
pod-build/gtest/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+22 files in other folders)
